# ai-placemat

./: .gitignore  AGENTS.md  PRD.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/graphs/: __init__.py  meal_insight_graph.py  trend_insight_graph.py
backend/app/ai/nodes/: __init__.py  meal_nodes.py  trend_nodes.py
backend/app/ai/prompts/: __init__.py  meal_prompts.py  trend_prompts.py
backend/app/api/: router.py
backend/app/api/routes/: meal.py  report.py  settings.py  trend.py
backend/app/db/: session.py
backend/app/models/: __init__.py  meal_report.py  meal_session.py  trend_snapshot.py  user.py  user_settings.py
backend/app/schemas/: common.py  meal.py  report.py  settings.py  trend.py
backend/app/services/: meal_service.py  report_service.py  settings_service.py  trend_service.py  user_service.py
backend/app/tasks/: report_tasks.py
contracts/: api.yaml
docs/: architecture.md  backend_architecture.md
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: app.dart  main.dart
frontend/lib/models/: anonymous_user.dart  device_debug_info.dart  gatt_debug_info.dart  meal_realtime_snapshot.dart  meal_report.dart  raw_ble_scan_result.dart  reminder_settings.dart  trend_summary.dart
frontend/lib/pages/: device_debug_page.dart  (+4 more)
frontend/linux/: CMakeLists.txt
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
(+28 files in other folders)
